# FIA11-Java-Projekt

backend/: .gitignore  Cargo.toml
backend/src/: main.rs  model.rs  routes.rs  state.rs
frontend/src/frontend/: WunschlisteGUI.java
