[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["timeout"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
